@@ -35,6 +35,22 @@
 <div class="document">
 
 
+<p>2018-03-25  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/pict.c (DecodeImage): Verify that sufficient backing data
+exists before allocating memory to read it.  Fixes oss-fuzz 6629
+&quot;graphicsmagick/coder_PCT_fuzzer: Out-of-memory in
+graphicsmagick_coder_PCT_fuzzer&quot;.</li>
+</ul>
+</blockquote>
+<p>2018-03-25  Fojtik Jaroslav  &lt;<a class="reference external" href="mailto:JaFojtik&#37;&#52;&#48;seznam&#46;cz">JaFojtik<span>&#64;</span>seznam<span>&#46;</span>cz</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/mat.c Check whether datablock is really read.
+Fixes oss-fuzz 7056 (Credit to OSS-Fuzz)</li>
+</ul>
+</blockquote>
 <p>2018-03-24  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
